--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <script src="js/script.js"></script>
+        <title>WebGame</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Šī bus mūsu web spēle.</div>
+        <button onclick="makeTile()">Start!</button>
+        <form id="forma"></form>
     </body>
 </html>
