--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>Šī bus mūsu web spēle.</div>
-        <button onclick="makeTile()">Start!</button>
+        <button type="button" onclick="makeTiles()">Start!</button>
         <form id="forma"></form>
     </body>
 </html>
