--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
         <title>WebGame</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/stils.css">
     </head>
     <body>
-        <div>Šī bus mūsu web spēle.</div>
-        <button type="button" onclick="makeTiles()">Start!</button>
-        <form id="forma"></form>
+        <div class="a">Mūsu pirma Web spēle.</div>
+		<div class="b">
+			<h1>Spēles noteikumi:</h1>
+				<li>Jums ir jāizvēles divi attēli, kuriem funkcijas f(x) vienādojums atbilst tās grafiskajam zīmējumam.</li>
+			<p>Izvelies lauka lielumu.</p>
+			<button type="button" onclick="makeTiles()">Pievienot!</button>
+			<form id="forma"></form>
+		<div>
     </body>
 </html>
