--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 		<div class="b">
 			<h1>Spēles noteikumi:</h1>
 			<div>Jums ir jāizvēles divi attēli, kuriem funkcijas f(x) vienādojums atbilst tās grafiskajam zīmējumam.</div>
-			<p>Izvelies lauka lielumu.</p>
+			<p>Izvelies spēles laukuma platumu (n*n rūtiņas)</p>
+                        <form>
+                        laukuma platums: <input type="number" id="quantity" name="quantity" value="4" size="5" min="2" max="10">
+                        <br>
+                        </form>
 			<button id="start" type="button" onclick="startGame()">Start!</button>
                         <form id="forma"></form>
 		</div>
