random vertibas sajauktas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="a">Mūsu pirmā Web spēle.</div>
 		<div class="b">
 			<h1>Spēles noteikumi:</h1>
-			<div>Jums ir jāizvēles divi attēli, kuriem funkcijas f(x) vienādojums atbilst tās grafiskajam zīmējumam.</div>
+			<div>Jums ir jāizvēles divi lauciņi, kuriem sakrīt vesels skaitlis un tā naturāllogaritms(ln(x)). Piemēram, ja jūs atverat lauciņu, kur ir skaitlis 3, tad jums ir jāatrod otrs lauciņš, kura vērtība ir ln(3)=1,0986</div>
 			<p>Izvelies spēles laukuma platumu (n*n rūtiņas)</p>
                         <form>
                         laukuma platums: <input type="number" id="quantity" name="quantity" value="4" size="5" min="2" max="10">
